syntax = "proto3";

option java_multiple_files = true;
option java_package = "boilerplates.proto.echo";
option java_outer_classname = "EchoProto";
option objc_class_prefix = "ECH";

package echo;

service Echo {
    rpc BidirectionalStream ( stream MessageReq) returns (stream MessageRes) {}
    //rpc ResponseStream (MessageReq) returns (stream MessageRes) {}
}

message MessageReq {
    int64 ts = 1;
    int64 messageCount = 2;
    int64 burstCount = 3;
    bytes payload = 4;
}

message MessageRes {
    int64 ts = 1;
    int64 messageCount = 2;
    int64 burstCount = 3;
    bytes payload = 4;
}